Trabalhando com banco de dados, injeção de dependências, autenticação de usuário e ducumentação atualizada
