# src/modules/accounts/entities/User.ts
@@ -1,25 +1,34 @@
 import { Column, CreateDateColumn, Entity, PrimaryColumn } from 'typeorm';
 import { v4 as uuidV4 } from 'uuid';
 
-@Entity("specifications")
-class Specification {
+@Entity('users')
+class User {
     @PrimaryColumn()
-    id?: string;
+    id: string;
 
     @Column()
     name: string;
 
     @Column()
-    description: string;
+    password: string;
+
+    @Column()
+    email: string;
+
+    @Column()
+    driver_license: string;
+
+    @Column()
+    isAdmin: boolean;
 
     @CreateDateColumn()
     created_at: Date;
 
     constructor() {
-        if(!this.id) {
+        if (!this.id) {
             this.id = uuidV4();
         }
     }
 }
 
-export { Specification };
+export { User };
